falcon_64: init.target.rc: Prevent enumeration in ADB only composition
During bootup the device first enumerates in ADB only composition
and then falls back to the persist.sys.usb.config.
Prevent this enumeration in ADB only composition during bootup
by setting the sys.usb.configfs from init.qcom.usb.rc.

Change-Id: I4d9aa8454202b8118ff76dfda7f44c6413c42020

--- a/init.target.rc
+++ b/init.target.rc
@@ -108,6 +108,7 @@ on boot && property:persist.vendor.usb.controller.default=*
 
 on property:vendor.usb.controller=*
     setprop sys.usb.controller ${vendor.usb.controller}
+    write /sys/module/usb_f_qcrndis/parameters/rndis_dl_max_xfer_size 15916
 
 #Peripheral manager
 service vendor.per_mgr /system/vendor/bin/pm-service
