SDM660_64 : Compilation fixes
Remove below flags for compilation:
  -BUILD_BROKEN_ANDROIDMK_EXPORTS :=true
  -BUILD_BROKEN_DUP_COPY_HEADERS :=true
  -BUILD_BROKEN_DUP_RULES :=true
  -BUILD_BROKEN_PHONY_TARGETS :=true
  -BUILD_BROKEN_ENG_DEBUG_TAGS:=true

--
AndroidBoard.mk: Use clang as the HOSTCC for kernel build

Since upstream plans to deprecate gcc, use clang for HOSTCC.
--
Disable prebuilt ELF check by setting BUILD_BROKEN_PREBUILT_ELF_FILES

   Disabling below prebuilt dependency checks by setting
   BUILD_BROKEN_PREBUILT_ELF_FILES flag

   - Dependencies of a prebuilt ELF file must be specified in
     LOCAL_SHARED_LIBRARIES or shared_libs.
   - Undefined symbols in a prebuilt ELF file must be found in one of its
     direct dependencies.
   - Prebuilt shared libraries must have correct DT_SONAME
--
Enable permissive mode initially.
--
Disable adsprpc and cdsprpc service to start from
init.target.rc as these services are getting started
from their respective modules.
--
sdm660_64: Disabling multiple hal and privapp enforce.

    Disabled gnss, vibrator, qtiradio, usb and dpm hal
    entries along with privapp enforced which is required
     for the device bootup.
--
sdm660_64: memory: set swiotlb to default size

    swiotlb size set to 64MB default value.
--

Change-Id: I0e3d0271dbce839104f954152f6347f3f8b80650

--- a/init.target.rc
+++ b/init.target.rc
@@ -189,15 +189,15 @@ service thermal-engine /system/vendor/bin/thermal-engine
 #    oneshot
 #
 
-service adsprpcd_root /vendor/bin/adsprpcd
-   class main
-   user media
-   group media
+#service adsprpcd_root /vendor/bin/adsprpcd
+#   class main
+#   user media
+#   group media
 
-service adsprpcd /vendor/bin/adsprpcd audiopd
-   class main
-   user media
-   group media
+#service adsprpcd /vendor/bin/adsprpcd audiopd
+#   class main
+#   user media
+#   group media
 
 service hbtp /system/vendor/bin/hbtp_daemon
     class main
@@ -210,11 +210,11 @@ service audiod /system/vendor/bin/audiod
    user system
    group system
 
-service vendor.cdsprpcd /vendor/bin/cdsprpcd
-   class main
-   user system
-   group system
-   disabled
+#service vendor.cdsprpcd /vendor/bin/cdsprpcd
+#   class main
+#   user system
+#   group system
+#   disabled
 
 #
 #service usf_tester /system/vendor/bin/usf_tester
@@ -414,7 +414,6 @@ on property:init.svc.zygote=restarting
     stop ppd
 
 on charger
-    load_system_props
     start qcom-post-boot
     start vendor.hvdcp_opti
     setprop vendor.usb.controller a800000.dwc3
