sdm660_64: move memlat settings to separate script
Kernel security hooks were added in kernel to restrict any
userspace process or thread to open perf events, this change
needs elevated selinux permission for perf activity.

Move the settings to a new script and give selinux permission
for perf activity for this new script

Change-Id: I47c05a292a3a6356d54d4798b301a4b275059ceb

--- a/init.target.rc
+++ b/init.target.rc
@@ -368,6 +368,16 @@ service cnss_diag /system/vendor/bin/cnss_diag -q -f -t HELIUM
    group system wifi inet sdcard_rw media_rw diag
    oneshot
 
+service dcvs-sh /vendor/bin/init.qti.dcvs.sh
+    class late_start
+    user root
+    group root system
+    disabled
+    oneshot
+
+on property:vendor.dcvs.prop=1
+   start dcvs-sh
+
 service ppd /system/vendor/bin/mm-pp-dpps
     class late_start
     user system
