sdm660_64: Add support for metadata encryption
Enable metadata encryption from fstab. Start keymaster,
vold and wait until the services are ready prior to
mounting of userdata.

Test:
1) Load meta including the change
2) Ran check_encryption test binary to run tets
   -> ./check_encryption  /dev/block/bootdevice/by-name/userdata
3) All test passed
4) Reboot device
5) Subsequent reboots are successfull

Change-Id: I0136e29ae17cc8a219cab108a0a05301c4d0eb07

--- a/init.target_dap.rc
+++ b/init.target_dap.rc
@@ -28,8 +28,7 @@
 #
 
 on fs
-    wait /dev/block/platform/soc/${ro.boot.bootdevice}
-    symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
+    start hwservicemanager
     mount_all /vendor/etc/fstab.qcom --early
     swapon_all /vendor/etc/fstab.qcom
     chown root system /mnt/vendor/persist
@@ -40,4 +39,6 @@ on fs
     write /sys/kernel/boot_adsp/boot 1
 
 on late-fs
+    wait_for_prop hwservicemanager.ready true
+    exec_start wait_for_keymaster
     mount_all /vendor/etc/fstab.qcom --late
