--- a/recovery/root/init.oppo.rc
+++ b/recovery/root/init.oppo.rc
@@ -11,3 +11,7 @@ on init
     chown system system /dev/cpuset/system-background/tasks
     chmod 0775 /dev/cpuset/system-background
     chmod 0664 /dev/cpuset/system-background/tasks
+
+    # enable power supply to otg_switch
+    write /sys/class/power_supply/usb/otg_switch 1
+
