--- a/recovery/root/system/etc/init/vendor.qti.hardware.cryptfshw@1.0-service-qti.qsee.rc
+++ b/recovery/root/system/etc/init/vendor.qti.hardware.cryptfshw@1.0-service-qti.qsee.rc
@@ -1,7 +1,7 @@
 on fs
     start vendor.cryptfshw-1-0
 
-service vendor.cryptfshw-1-0 /system/bin/vendor.qti.hardware.cryptfshw@1.0-service-qti.qsee
+service vendor.cryptfshw-1-0 /vendor/bin/vendor.qti.hardware.cryptfshw@1.0-service-qti
     interface vendor.qti.hardware.cryptfshw@1.0::ICryptfsHw default
     user root
     group root
